News
====

.. contents::

0.9
---

Backward incompatible changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* The notion of "empty" has changed to include empty lists,
  dictionaries, and tuples.  If you get one of these values passed
  into (or generated by) a validator with ``not_empty=True`` you can
  get exceptions where you didn't previously.

Enhancements
~~~~~~~~~~~~

* Added support for Paste's MultiDict dictionary as input to
  Schema.to_python, by converting it to a normal dict via MultiDict.mixed.
  Previously MultiDicts wouldn't work with CompoundValidators (like
  ForEach)

* Added encoding parameter to htmlfill, which will handle cases when mixed
  str and unicode objects are used (turning all str objects into unicode)

* Include ``formencode.validators.InternationalPhoneNumber`` from
  W-Mark Kubacki.

* ``validators.Int`` takes ``min`` and ``max`` options (from Felix
  Schwarz).

* You can control the missing message (which by default is just
  "Missing Value") using the message ``"missing"`` in a validator
  (also from James Gardner).

* Added ``validators.CADR`` (for IP addresses with an optional range)
  and ``validators.MACAddress`` (from Christoph Haas).

Bug Fixes
~~~~~~~~~

* Be friendlier when loaded from a zip file (as with py2exe);
  previously only egg zip files would work.

* Fixed bug in htmlfill when a document ends with no trailing text
  after the last tag.

* Fix problem with HTMLParser's default unescaping routing, which only
  understood a very limited number of entities in attribute values.

* Fix problem with looking up A records for email addresses.

* ``validators.String`` now always returns strings.  It also converts
  lists to comma-separated strings (no ``[...]``), and can encode
  unicode if an ``encoding`` parameter is given.  Empty values are
  handled better.

* ``validators.UnicodeString`` properly handles non-Unicode inputs.

* Make ``validators.DateConverter`` serialize dates properly
  (from James Gardner).
